# lab_1

./: CMakeLists.txt  Lib.h  Point.h  main.cpp
Decorators/: CircleDecorator.cpp  CircleDecorator.h  Decorator.cpp  Decorator.h  RectangleDecorator.cpp  RectangleDecorator.h  TriangleDecorator.cpp  TriangleDecorator.h
IO/: Reader.cpp  Reader.h  Writer.cpp  Writer.h
Shape/: IShape.cpp  IShape.h
Shape/Shapes/: Circle.cpp  Circle.h  Rectangle.cpp  Rectangle.h  Triangle.cpp  Triangle.h
